--- a/private/listElements.html
+++ b/private/listElements.html
@@ -21,23 +21,27 @@
 
     <h1>Hello World</h1>
     <button class="btn">Send Message</button>
-    <button class="btn btn--pill">Send Message</button>
-    <button class="btn btn--pill active">Send Message</button>
+    <button class="btn btn--primary">Send Message</button>
+    <button class="btn btn--secondary">Send Message</button>
+    <button class="btn btn--dark">Send Message</button>
+    <button class="btn btn--primary btn--pill">Send Message</button>
+    <button class="btn btn--secondary btn--pill">Send Message</button>
 
     <nav class="nav">
         <ul>
             <li>
-            <button class="btn btn--pill active">Send Message</button>
+            <button class="btn btn--pill glass--effect">Send Message</button>
             </li>
             <li>
-            <button class="btn btn--pill active">Send Message</button>
+            <button class="btn btn--pill">Send Message</button>
             </li>
             <li>
-            <button class="btn btn--pill active">Send Message</button>
+            <button class="btn btn--pill">Send Message</button>
             </li>
         </ul>
     </nav>
         
+ 
         
 </body>
 </html>
