btn  input and display

--- a/private/listElements.html
+++ b/private/listElements.html
@@ -20,28 +20,31 @@
     </style>
 
     <h1>Hello World</h1>
+
+
+    <nav class="nav">
+        <ul>
     <button class="btn">Send Message</button>
     <button class="btn btn--primary">Send Message</button>
     <button class="btn btn--secondary">Send Message</button>
     <button class="btn btn--dark">Send Message</button>
     <button class="btn btn--primary btn--pill">Send Message</button>
     <button class="btn btn--secondary btn--pill">Send Message</button>
-
-    <nav class="nav">
-        <ul>
-            <li>
-            <button class="btn btn--pill glass--effect">Send Message</button>
-            </li>
-            <li>
-            <button class="btn btn--pill">Send Message</button>
-            </li>
-            <li>
-            <button class="btn btn--pill">Send Message</button>
-            </li>
+    <button class="btn btn--primary btn--action">Login</button>
         </ul>
     </nav>
         
+
+                <div class="btn_hamb">
+                <div class="line l_1"></div>
+                <div class="line l_2"></div>
+                <div class="line l_3"></div>
+            </div>
  
+            <label for="name" class="label">
+                Name
+                <input type="text" name="name" id="name" class="input" placeholder="John Doe">
+            </label>
         
 </body>
 </html>
